--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "eslint": "npx eslint . --ext ts,tsx"
+    "eslint": "eslint . --ext ts,tsx",
+    "eslint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
