--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,16 @@
   "rules": {
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
-    "semi": "error"
+    "semi": "error",
+    "no-empty": "error",
+    "no-irregular-whitespace": "error",
+    "array-callback-return": "error",
+    "default-case": "error",
+    "no-eq-null": "error",
+    "no-magic-numbers": "error",
+    "no-multi-spaces": "error",
+    "no-redeclare": "error",
+    "camelcase": "error",
+    "array-bracket-spacing": "error"
   }
 }
