--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,17 @@
 {
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "root": true,
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  ],
   "plugins": ["react", "@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": { "jsx": true },
     "ecmaVersion": "latest",
+    "project": "tsconfig.eslint.json",
     "sourceType": "module"
   },
   "env": {
@@ -15,6 +22,7 @@
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
     "semi": "error",
+    "no-console": "error",
     "no-empty": "error",
     "no-irregular-whitespace": "error",
     "array-callback-return": "error",
@@ -23,7 +31,7 @@
     "no-magic-numbers": "error",
     "no-multi-spaces": "error",
     "no-redeclare": "error",
-    "camelcase": "error",
+    "camelcase": ["error", { "properties": "never" }],
     "array-bracket-spacing": "error"
   }
 }
