prittierを導入し、ESlintのフォーマッターと競合しないように修正

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "eslint": "eslint . --ext ts,tsx",
-    "eslint:fix": "eslint . --ext ts,tsx --fix"
+    "eslint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
@@ -30,7 +32,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
-    "*.--write": "prettier --write",
+    "*.--write": "prettier -c src/*.{ts,tsx}",
     "*.js": "eslint --cache --fix"
   }
 }
