--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "eslint": "eslint . --ext ts,tsx",
-    "eslint:fix": "eslint . --ext ts,tsx --fix",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "fix": "npm run format && npm run eslint"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -31,8 +31,6 @@
     "vite": "^4.2.0"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --cache --fix",
-    "*.--write": "prettier -c src/*.{ts,tsx}",
-    "*.js": "eslint --cache --fix"
+    "*.{ts,tsx,js,jsx}": "npm run fix"
   }
 }
