--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9"
+    "styled-reset": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -29,6 +29,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "2.8.6",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
