--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "prepare": "husky install",
     "eslint": "eslint . --ext ts,tsx",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "fix": "npm run format && npm run eslint"
+    "fix": "npm run format && npm run eslint",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-reset": "^4.4.5"
+    "styled-reset": "^4.4.5",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -28,9 +32,11 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
     "prettier": "2.8.6",
     "styled-components": "^5.3.9",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
